# script_news_for_discord_scraper

./: .env.example  .gitignore  README.md  logging_configs.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: cron_job.yml
core/: config.py  db.py  logging.py  utils.py
pages/: scrape_animeflv.py  scrape_ciperchile.py  scrape_google_trends.py  scrape_lacuarta.py  scrape_latercera.py  scrape_recetas_gratis.py  scrape_somoskudasai.py
